changement de controleur en interface et gestionTactique comme inner class de jeu